# phonotactic-sensitivity

./: .gitignore  README.md  pyproject.toml
data/: continua.csv
data/continua/lih-rih/voiceA/: lih-rih_cntnm_000.TextGrid  lih-rih_cntnm_010.TextGrid
data/continua/lih-rih/voiceE/: lih-rih_cntnm_000.TextGrid  lih-rih_cntnm_010.TextGrid
data/continua/slih-srih/voiceA/: slih-srih_cntnm_000.TextGrid  slih-srih_cntnm_010.TextGrid
data/continua/slih-srih/voiceE/: slih-srih_cntnm_000.TextGrid  slih-srih_cntnm_010.TextGrid
data/continua/tlih-trih/voiceA/: tlih-trih_cntnm_000.TextGrid  tlih-trih_cntnm_010.TextGrid
data/continua/tlih-trih/voiceE/: tlih-trih_cntnm_000.TextGrid  tlih-trih_cntnm_010.TextGrid
data/continua/vlih-vrih/voiceA/: vlih-vrih_cntnm_000.TextGrid  vlih-vrih_cntnm_010.TextGrid
data/continua/vlih-vrih/voiceE/: vlih-vrih_cntnm_000.TextGrid  vlih-vrih_cntnm_010.TextGrid
models/: models.json
models/probing_classifiers/: lr-w2v2_base_ft.pkl  lr-w2v2_base_pret-acs.pkl  lr-w2v2_base_pret-sp.pkl  lr-w2v2_base_unt.pkl  lr-w2v2_large_ft.pkl  lr-w2v2_large_pret-sp.pkl  lr-w2v2_large_unt.pkl
results/ctc_probabilities/: w2v2_base_ft.csv  w2v2_base_pret-acs.csv  w2v2_base_pret-sp.csv  w2v2_base_unt.csv  w2v2_large_ft.csv  w2v2_large_pret-sp.csv  w2v2_large_unt.csv
results/embedding_similarities/: w2v2_base_ft.csv  w2v2_base_pret-acs.csv  w2v2_base_pret-sp.csv  w2v2_base_unt.csv  w2v2_large_ft.csv  w2v2_large_pret-sp.csv  w2v2_large_unt.csv
results/probe_probabilities/: w2v2_base_ft.csv  w2v2_base_pret-acs.csv  w2v2_base_pret-sp.csv  w2v2_base_unt.csv  w2v2_large_ft.csv  w2v2_large_pret-sp.csv  w2v2_large_unt.csv
scripts/: compute_measures.py
src/phonotactic_sensitivity/: file_loading.py  measures.py  modeling.py  paths.py  settings.py
